Fix overflow from vw, closes #6

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,6 +2,7 @@
 
 .footer {
   width: 100vw;
+  max-width:100%;
   min-height: 54vh;
   background-repeat: no-repeat;
   background-size: cover;
