--- a/src/layouts/full_background_image/full_bg_img.scss
+++ b/src/layouts/full_background_image/full_bg_img.scss
@@ -1,6 +1,8 @@
 
 
 .header-container {
+  width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   min-height: 82vh;
