--- a/src/layouts/image_gallery/image_gallery.scss
+++ b/src/layouts/image_gallery/image_gallery.scss
@@ -2,6 +2,7 @@
 
 .image-gallery {
   width: 100vw;
+  max-width: 100%;
   min-height: 82vh;
   display: flex;
   justify-content: center;
