--- a/src/layouts/list/list.scss
+++ b/src/layouts/list/list.scss
@@ -2,6 +2,7 @@
 
 .list {
   width: 100vw;
+  max-width: 100%;
   min-height: 24vh;
   display: flex;
   justify-content: center;
