--- a/src/layouts/reel/reel.scss
+++ b/src/layouts/reel/reel.scss
@@ -2,6 +2,7 @@
 
 .reel {
   min-width: 100vw;
+  max-width: 100%;
   min-height: 82vh;
   display: flex;
   flex-wrap: wrap;
