--- a/src/layouts/text_center/text_center.scss
+++ b/src/layouts/text_center/text_center.scss
@@ -3,6 +3,7 @@
 
 .textandlist-container {
   width: 100vw;
+  max-width: 100%;
   min-height: 82vh;
   display: flex;
   flex-wrap: wrap;
